apps/timekeeper/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timekeeper
  labels:
    app: timekeeper
spec:
  replicas: 4
  selector:
    matchLabels:
      app: timekeeper
  template:
    metadata:
      labels:
        app: timekeeper
    spec:
      containers:
      - name: timekeeper
        image: 637321195426.dkr.ecr.us-west-2.amazonaws.com/avi-liatrio-interview:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app.kubernetes.io/name"
                    operator: In
                    values:
                      - timekeeper
              topologyKey: "topology.kubernetes.io/zone"
