apps/timekeeper/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timekeeper
  labels:
    app: timekeeper
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: timekeeper
