apps/timekeeper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timekeeper
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: timekeeper.spidereye.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: timekeeper
            port:
              number: 8080
